# greentic-interfaces

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  SECURITY_FIX_REPORT.md  pr-changed-files.txt  pr-comment.md
.codex/: PR-03-document-abi-boundary-no-component-migration.md
.codex/done/: GI-PR-01.md  GI-PR-02.md  InterfacesValPR-01.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dependabot-automerge.yml  dev-publish-crates.yml  dev-publish.yml  nightly-semver.yml  pages.yml  publish-wit.yml  publish.yml  weekly-stable-publish.yml
.well-known/wasm-pkg/: registry.json
ci/: check_no_duplicate_canonical_wit.sh  local_check.sh
ci/steps/: external_consumer_check.sh
crates/greentic-interfaces/: Cargo.toml  README.md  build.rs
crates/greentic-interfaces-guest/: Cargo.toml  build.rs
crates/greentic-interfaces-guest/build_support/: wit_paths.rs
crates/greentic-interfaces-guest/src/: lib.rs
crates/greentic-interfaces-guest/tests/: component_v060_canonical_world.rs  packaged_component_v060_smoke.rs  wit_paths.rs
crates/greentic-interfaces-guest/tests/trybuild/: component_v060_export.rs
crates/greentic-interfaces-guest/wit/greentic/component@0.6.0/: package.wit
crates/greentic-interfaces-host/: Cargo.toml
crates/greentic-interfaces-host/src/: lib.rs
crates/greentic-interfaces-wasmtime/: Cargo.toml  README.md  build.rs
crates/greentic-interfaces/src/: wit_all.rs
crates/greentic-interfaces/tests/: wit_build.rs
crates/greentic-interfaces/wit/greentic/worker@1.0.0/: package.wit
docs/: DISCOVERY_COMPONENT_INVOKE.md  README.md  component-descriptor.md
docs/audits/: interfaces-describe-manifest-agreement.md
docs/vision/: legacy.md  v0_6.md
examples/guest-node-minimal/: Cargo.toml
examples/guest-node-minimal/src/: lib.rs
guest-tests/component-v060-canonical-dummy/: Cargo.toml
guest-tests/component-v060-canonical-dummy/src/: lib.rs
guest-tests/repo-ui-actions-dummy/: Cargo.toml
scripts/: generate-release-notes.sh  wit_lint.sh
