[workspace]
members = [
    "crates/greentic-interfaces",
    "crates/greentic-interfaces-wasmtime",
    "crates/greentic-interfaces-host",
    "crates/greentic-interfaces-guest",
    "guest-tests/component-v060-canonical-dummy",
    "guest-tests/repo-ui-actions-dummy",
    "guest-tests/distributor-api-dummy",
    "guest-tests/oauth-broker-client-harness",
    "examples/component-describe",
    "examples/crates-io-consumer",
    "examples/guest-node-minimal",
    "examples/runner-host-smoke",
    "examples/provider-core-dummy",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2024"
authors = ["Greentic.ai"]
version = "0.5.0"
repository = "https://github.com/greenticai/greentic-interfaces"

[workspace.dependencies]
anyhow = "1"
greentic-interfaces = { path = "crates/greentic-interfaces", version = "0.5", default-features = false }
greentic-interfaces-wasmtime = { path = "crates/greentic-interfaces-wasmtime", version = "0.5", default-features = false }
greentic-interfaces-guest = { path = "crates/greentic-interfaces-guest", version = "0.5", default-features = false }
greentic-types = { version = "0.5"}
constant_time_eq = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
time = "0.3"
thiserror = "2"
wasmtime = { version = "43", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = "43"
wit-bindgen = { version = "0.57", default-features = false, features = ["macros", "realloc"] }
wit-bindgen-core = "0.57"
wit-bindgen-rust = "0.57"
schemars = { version = "1", features = ["derive"] }
wit-parser = "0.247"
insta = { version = "1", features = ["json"] }
camino = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
walkdir = "2"
wat = "1"
