[workspace]
members = [
    "crates/greentic-interfaces",
    "crates/greentic-interfaces-wasmtime",
    "crates/greentic-interfaces-host",
    "crates/greentic-interfaces-guest",
    "guest-tests/component-v060-canonical-dummy",
    "guest-tests/repo-ui-actions-dummy",
    "guest-tests/distributor-api-dummy",
    "guest-tests/oauth-broker-client-harness",
    "examples/component-describe",
    "examples/crates-io-consumer",
    "examples/guest-node-minimal",
    "examples/runner-host-smoke",
    "examples/provider-core-dummy",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2024"
authors = [
    "Greentic.ai",
]
version = "0.6.0-dev.0"
repository = "https://github.com/greenticai/greentic-interfaces"

[workspace.dependencies]
anyhow = "1"
constant_time_eq = "0.4"
serde_json = "1"
semver = "1"
time = "0.3"
thiserror = "2"
wasmtime-wasi = "43"
wit-bindgen-core = "0.57"
wit-bindgen-rust = "0.57"
wit-parser = "0.247"
camino = "1"
proc-macro2 = "1"
quote = "1"
walkdir = "2"
wat = "1"

[workspace.dependencies.greentic-interfaces]
path = "crates/greentic-interfaces"
version = ">=0.6.0-dev, <0.7.0-0"
default-features = false

[workspace.dependencies.greentic-interfaces-wasmtime]
path = "crates/greentic-interfaces-wasmtime"
version = ">=0.6.0-dev, <0.7.0-0"
default-features = false

[workspace.dependencies.greentic-interfaces-guest]
path = "crates/greentic-interfaces-guest"
version = ">=0.6.0-dev, <0.7.0-0"
default-features = false

[workspace.dependencies.greentic-types]
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.wasmtime]
version = "43"
default-features = false
features = [
    "component-model",
    "cranelift",
    "runtime",
    "std",
]

[workspace.dependencies.wit-bindgen]
version = "0.57"
default-features = false
features = [
    "macros",
    "realloc",
]

[workspace.dependencies.schemars]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.insta]
version = "1"
features = [
    "json",
]

[workspace.dependencies.syn]
version = "2"
features = [
    "full",
]
